@@ -4,7 +4,6 @@ import huan.backend.dto.request.UserRequest;
 import huan.backend.dto.response.PageResponse;
 import huan.backend.dto.response.ProjectResponse;
 import huan.backend.dto.response.UserResponse;
-import huan.backend.entity.Member;
 import huan.backend.entity.Project;
 import huan.backend.entity.User;
 import huan.backend.enums.ErrorCode;
@@ -12,10 +11,12 @@ import huan.backend.enums.Role;
 import huan.backend.exception.AppException;
 import huan.backend.mapper.ProjectMapper;
 import huan.backend.mapper.UserMapper;
-import huan.backend.repository.MemberRepository;
+import huan.backend.repository.ProjectRepository;
 import huan.backend.repository.UserRepository;
 import huan.backend.service.UserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.cache.annotation.CacheEvict;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -25,7 +26,6 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -34,10 +34,11 @@ public class UserServiceImpl implements UserService {
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
     private final UserMapper userMapper;
-    private final MemberRepository memberRepository;
     private final ProjectMapper projectMapper;
+    private final ProjectRepository projectRepository;
 
     @Override
+    @CacheEvict(value = "users", allEntries = true)
     public UserResponse addAccount(UserRequest accountRequest){
         if(userRepository.existsByEmail(accountRequest.getEmail())||userRepository.existsByPhoneNumber(accountRequest.getPhoneNumber()))
             throw new AppException(ErrorCode.USER_EXISTED);
@@ -51,6 +52,7 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @Cacheable(value = "users", key = "#page + '-' + #size")
     public PageResponse<UserResponse> getAllUsers(int page, int size) {
         Pageable pageable = PageRequest.of(page - 1, size, Sort.by("id").ascending());
         Page<User> pageData = userRepository.findAll(pageable);
@@ -76,31 +78,20 @@ public class UserServiceImpl implements UserService {
     }
 
     @Override
+    @CacheEvict(value = {"users", "user_projects"}, allEntries = true)
     public void deleteAccount(Long id) {
         User user = userRepository.findById(id).orElseThrow(() -> new AppException(ErrorCode.USER_NOT_FOUND));
         user.setIsActive(false); 
         userRepository.save(user); 
-      
     }
     
     @Override
-    public PageResponse<ProjectResponse> getProjectsByUserId(Long userId, int page, int size) {
-        Pageable pageable = PageRequest.of(page - 1, size);
-        
-        Page<Member> memberPage = memberRepository.findActiveByUser(userId, pageable);
-
-        List<ProjectResponse> responseList = memberPage.getContent().stream()
-                .map(Member::getProject) 
-                .filter(Project::getIsActive) 
+    @Cacheable(value = "user_projects", key = "#userId")
+    public List<ProjectResponse> getProjects(Long userId) {
+        List<Project> list = projectRepository.findByUserId(userId);
+        List<ProjectResponse> responseList = list.stream()
                 .map(projectMapper::toResponse)
-                .collect(Collectors.toList());
-
-        return PageResponse.<ProjectResponse>builder()
-                .current(page)
-                .size(memberPage.getSize())
-                .total(memberPage.getTotalPages())
-                .totalElements(memberPage.getTotalElements())
-                .data(responseList)
-                .build();
+                .toList();
+        return responseList;
     }
 }
